<resources>
    <string name="app_name">Current Weather</string>
    <string name="default_location">Determining location</string>
    <string name="default_temp">t°</string>
    <string name="get_weather">Change City</string>
    <string name="default_enter_city_name">Enter city name</string>
    <string name="get_current_location_weather">Get the weather by my location</string>
    <string name="apply_button">Apply</string>
    <string name="toast_failed_request">Wrong city name</string>
    <string name="default_wind">m/s</string>
    <string name="default_condition">Unknown</string>
    <string name="choose_the_city">Choose the city</string>
    <string name="temperature">Temperature:</string>
    <string name="wind">Wind:</string>
    <string name="condition">Condition:</string>
    <string name="empty_city_toast">Enter city name</string>


</resources>
